[gd_scene load_steps=8 format=3 uid="uid://sgih0a8ceqck"]

[ext_resource type="Texture2D" uid="uid://ktoc4y04k5ng" path="res://sprites/heart.png" id="1_28uo0"]
[ext_resource type="Script" path="res://scripts/gameplay.gd" id="2_tyu71"]
[ext_resource type="Texture2D" uid="uid://xc5h0xglx2wc" path="res://sprites/shield.png" id="3_4j7yo"]
[ext_resource type="Texture2D" uid="uid://cm6a8a46afdx4" path="res://sprites/sword.png" id="4_rh5bu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4kel"]
size = Vector2(20, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_for4s"]
size = Vector2(43, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_fwa2l"]
radius = 23.0868

[node name="Player" type="Node2D"]

[node name="Heart" type="Sprite2D" parent="."]
texture = ExtResource("1_28uo0")

[node name="Node2D" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_tyu71")

[node name="Shield" type="Sprite2D" parent="Node2D"]
unique_name_in_owner = true
position = Vector2(32.895, 1)
texture = ExtResource("3_4j7yo")

[node name="ShieldRB" type="RigidBody2D" parent="Node2D/Shield"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Shield/ShieldRB"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_f4kel")

[node name="Sword" type="Sprite2D" parent="Node2D"]
unique_name_in_owner = true
position = Vector2(53.565, 0)
texture = ExtResource("4_rh5bu")

[node name="CharacterBody2D" type="CharacterBody2D" parent="Node2D/Sword"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Sword/CharacterBody2D"]
position = Vector2(9.935, 0)
shape = SubResource("RectangleShape2D_for4s")

[node name="SwordRB" type="RigidBody2D" parent="Node2D/Sword"]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 4

[node name="PlayerRB" type="RigidBody2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerRB"]
shape = SubResource("CircleShape2D_fwa2l")

[connection signal="body_entered" from="Node2D/Shield/ShieldRB" to="Node2D" method="_on_collision_shield"]
[connection signal="body_entered" from="Node2D/Sword/SwordRB" to="Node2D" method="_on_collision_sword"]
[connection signal="body_entered" from="PlayerRB" to="Node2D" method="_on_collision_player"]
